// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildInfraSpecifications snapshot test able to select a connector 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 100%;"
      >
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <div
            class="section noPadTop"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
                style="width: 220px;"
              >
                Where do you want the builds to run?
              </p>
            </div>
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    Select a Kubernetes Cluster
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws container"
                          style="width: 300px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <div
                              class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
                              style="justify-content: space-between; width: 100%;"
                            >
                              <p
                                class="StyledProps---font--2ipy StyledProps---main--1Wws"
                              >
                                tesa 1
                              </p>
                              <div
                                class="rightStatus"
                              >
                                <span
                                  class="bp3-icon bp3-icon-full-circle StyledProps---main--1Wws status redStatus"
                                  icon="full-circle"
                                >
                                  <svg
                                    data-icon="full-circle"
                                    height="6"
                                    viewBox="0 0 16 16"
                                    width="6"
                                  >
                                    <desc>
                                      full-circle
                                    </desc>
                                    <path
                                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="Tag---main--1vng"
                                >
                                  <span
                                    class="bp3-tag bp3-minimal tag"
                                  >
                                    <span
                                      class="bp3-text-overflow-ellipsis bp3-fill"
                                    >
                                      account
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-bottom-xsmall--N8Iq"
                >
                  Namespace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    class="bp3-form-group"
                    data-id="namespace-1"
                    style="width: 300px;"
                  >
                    
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                      >
                        <div
                          class="bp3-input-group MultiTypeInput---input--36mQ"
                        >
                          <input
                            class="bp3-input"
                            name="namespace"
                            type="text"
                            value=""
                          />
                        </div>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                            >
                              <span
                                class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="#009dff"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot test initializes ok 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 100%;"
      >
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <div
            class="section noPadTop"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
                style="width: 220px;"
              >
                Where do you want the builds to run?
              </p>
            </div>
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    Select a Kubernetes Cluster
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws container"
                          style="width: 300px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="placeholder"
                            >
                              Select
                            </span>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-bottom-xsmall--N8Iq"
                >
                  Namespace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    class="bp3-form-group"
                    data-id="namespace-1"
                    style="width: 300px;"
                  >
                    
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                      >
                        <div
                          class="bp3-input-group MultiTypeInput---input--36mQ"
                        >
                          <input
                            class="bp3-input"
                            name="namespace"
                            type="text"
                            value=""
                          />
                        </div>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                            >
                              <span
                                class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="#009dff"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
